...
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="jnB-uG-TpP">
                                <rect key="frame" x="15" y="358" width="384" height="180"/>
                                <subviews>
                                    <textField opaque="NO" contentMode="scaleToFill" restorationIdentifier="emailField" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Your Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="tmm-wH-XZr" userLabel="emailField">
                                        <rect key="frame" x="0.0" y="0.0" width="384" height="50"/>
                                        <accessibility key="accessibilityConfiguration" identifier="emailField"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="FP8-SJ-msx"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="next"/>
                                        <connections>
                                            <outlet property="delegate" destination="BYZ-38-t0r" id="sw7-za-GY3"/>
                                        </connections>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter Your Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bf3-yA-6yc" userLabel="passwordField">
                                        <rect key="frame" x="0.0" y="65" width="384" height="50"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="lXI-3V-LK9"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                        <textInputTraits key="textInputTraits" returnKeyType="done" enablesReturnKeyAutomatically="YES" secureTextEntry="YES"/>
...
                                        <color key="backgroundColor" systemColor="linkColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        <rect key="contentStretch" x="0.10000000000000001" y="0.0" width="1" height="1"/>
                                        <constraints>
                                            <constraint firstAttribute="height" constant="50" id="GRg-k3-FNz"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                        <state key="normal" title="LOGIN">
                                            <color key="titleColor" systemColor="secondarySystemGroupedBackgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        </state>
                                    </button>
                                </subviews>
                            </stackView>
                        </subviews>
...
