//
//  DemoAppUITests.swift
//  DemoAppUITests
//
//  Created by Ravi Kumar on 27/11/19.
//  Copyright © 2019 Ravi Kumar. All rights reserved.
//

import XCTest

class DemoAppUITests: XCTestCase {

    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.

        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }

    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
    }

    func testExample() {
        // UI tests must launch the application that they test.
        let app = XCUIApplication()
        app.launch()
        
        let emailField = app.secureTextFields["emailField"]
        let passwordField = app.textFields["passwordField"]
        XCTAssert(emailField.exists)
        emailField.tap()
        emailField.typeText("ravi.maurya@nickelfox.com")
        passwordField.tap()
        passwordField.typeText("Test@12345")
        app.buttons["LOGIN"].tap()

        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
    }

//    func testLaunchPerformance() {
//        if #available(macOS 10.15, iOS 13.0, tvOS 13.0, *) {
//            // This measures how long it takes to launch your application.
//            measure(metrics: [XCTOSSignpostMetric.applicationLaunch]) {
//                XCUIApplication().launch()
//            }
//        }
//    }
}
